crucible-llvm-cli/test-data/ub/025.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/ub/025.cbl:9:12: error: in main
  Failed to load function handle
  Details:
    Expected function handle of type FunctionHandleRepr [] UnitRepr
    for call to function malloc
    but found calling handle of type FunctionHandleRepr [IntrinsicRepr LLVM_pointer [BVRepr 64]] (IntrinsicRepr LLVM_pointer [BVRepr 64])
  false
COUNTEREXAMPLE
